# lazy-beanstalk

./: .dockerignore  .ebignore  .gitignore  CLAUDE.md  Dockerfile  Dockerrun.aws.json  MIGRATION.txt  Makefile  Pipfile  README.md  client.py  config.yml  docker-compose.yml  installer.sh  lazy-beanstalk.config.yml  lazy-beanstalk.yml  pyproject.toml  quotes.json  server.py  setup.sh  tasks.yaml
.ebextensions/: 00_permissions.config
app/: main.py  server.py
app/modules/: proxy.py  ttyd_manager.py
application/: main.py
backend/: server.py
backend/modules/: proxy.py  ttyd_manager.py
deployment/: config.yml  install_deps.py  manage.py  scrap.sh  ship.sh
deployment/configurations/: config.yaml  config.yml
deployment/modules/: common.py  configure.py  scrap.py  secure.py  setup.py  shield.py  ship.py  support.py
deployment/policies/: trust-policy.json
frontend/static/: index.html
lazy_beanstalk/: __init__.py  cli.py  config.py  scrap.py  secure.py  shield.py  ship.py  support.py
notes/: authentication  ebtrustpolicy.md
tests/: __init__.py  conftest.py  test_config.py  test_scrap.py  test_secure.py  test_shield.py  test_ship.py
wrapper/: server.py
wrapper/modules/: ttyd_manager.py
wrapper/static/: index.html
