# pyproject.toml

[tool.poetry]
name = "lazy-beanstalk"
version = "0.0.0"
description = "A template for deploying Python web apps to AWS Elastic Beanstalk"
authors = ["Alex Basile <basileaw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
chatline = "^0.2.9"
terminaide = "^1.1.1"
starlette = "^0.47.2"
fastapi = "^0.116.1"

[tool.poetry.group.dev.dependencies]
botocore = ">=1.37.34,<2.0.0"
boto3 = ">=1.37.34,<2.0.0"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
